samples/_failures_safe/1761651261_4dbcb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4b52317.c: In function ‘main’:
./samples/SAFE/__tmp_c4b52317.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("5. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_c4b52317.c:140:9: error: expected declaration or statement at end of input
